--- a/app/src/main/assets/recplayer.html
+++ b/app/src/main/assets/recplayer.html
@@ -12,7 +12,7 @@
     <div class="wrapper">
         <div class="content">
             <div id="recplay">
-                <!--<div id="controls" class="noselect">
+                <div id="controls" class="noselect">
                     <div class="control" id="play-pause" title="play/pause"><img
                             src="./images/recplayer/pause.png"></div>
                     <div class="control" id="zoom-in" title="zoom in"><img
@@ -22,7 +22,7 @@
                     <div class="control" id="fullscreen" title="fullscreen"><img
                             src="./images/recplayer/fullscreen.png"></div>
                 </div>
-                <canvas tabindex="0"></canvas>-->
+                <canvas tabindex="0"></canvas>
             </div>
         </div>
     </div>
